welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: identifier expected but ')' found.
	       avance§)
                      ^